# CppLevelEditor

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
imgui/: imfilebrowser.h  imguiStyle.cpp  imguiStyle.h  rlImGui.cpp  rlImGui.h  rlImGuiColors.h  textselect.cpp
src/: main.cpp  typedef.h
src/EngineInputs/: InputObserver.h  InputType.h  inputs.cpp  inputs.h
src/EngineInputs/Gizmos/: GizmoController.cpp  GizmoController.h
src/Inputs/: Inputs.cpp  Inputs.h  inputs.cpp
src/LevelEditor/: Gizmo.cpp  Gizmo.h  Objects.h  ObjectsUI.cpp  ObjectsUI.h  gameEntity.h  objectHandling.cpp  objectHandling.h  objectsUI.cpp  objectsUI.h  objectsUi.cpp
src/Logging/: ConsoleUI.cpp  ConsoleUI.h  Logger.h
src/Rendering/: Renderer.cpp  Renderer.h
src/SaveLevel/: Save.cpp  Save.h  save.cpp  save.h
utf8/: core.h  utf8.h
